# starshot-benchmark

./: .gitignore  CLAUDE.md  enx.toml
server/: PIPELINE.md  pyproject.toml
server/app/: main.py  main_noframes.py  main_nomesh.py  playground.py  state_repo.py
server/app/api/: factories.py  registry.py  routes.py  run_summary.py  schemas.py  step01_http_entry.py  step17_serve.py  step18_serve.py
server/app/core/: config.py  context.py  errors.py  events.py  prompts.py  slots.py  terminal_log.py  types.py
server/app/geometry/: bbox_validator.py  frames.py  relationship_graph.py
server/app/llm/: anthropic.py  client.py  recorded.py  registry.py
server/app/llm/prompts/: phase1_step04_overall_bbox.py  phase1_step05_frame_decider.py  phase1_step06_scene_breakdown.py  phase2_step09_anchor_objects.py  phase2_step10_anchor_objects.py  phase2_step10_object_bboxes.py  phase2_step11_object_bboxes.py  phase2_step13_completion_loop.py  phase2_step14_completion_loop.py
server/app/mesh_gen/: interface.py  stub.py
server/app/pipeline/: divider.py  generation.py  step02_execute_run.py  step03_orchestrator.py  step15_assemble_scene.py  step16_assemble_scene.py  step16_publish_glb.py  step17_publish_glb.py
server/app/pipeline/phase1/: step04_overall_bbox.py  step05_frame_decider.py  step06_scene_breakdown.py  step07_write_plans.py  step08_recurse.py  step09_collect_leaves.py
server/app/pipeline/phase2/: frame_summary.py  step09_anchor_objects.py  step10_anchor_objects.py  step10_object_bboxes.py  step11_mesh_generation.py  step11_object_bboxes.py  step12_mesh_generation.py  (+6 more)
server/app/services/: llm.py  threed.py
server/app/utils/: cache.py  geometry.py  logging.py  topology.py
server/runs/21ee17b0fcdf49249b3bf2245cd262dc/: events.jsonl  run.json
server/runs/cbf597b628444662adfd8185e15cd670/: events.jsonl  run.json
server/runs/run_001/: scene.glb
server/tests/integration/: conftest.py  test_api_layer.py  test_orchestrator.py  test_phase1_divider.py  test_phase2_generator.py
server/tests/unit/: test_assembly.py  test_bbox.py  test_bbox_validator.py  test_events.py  test_frames.py  test_llm_client.py  test_llm_registry.py  test_mesh_gen_stub.py  test_relationship_graph.py  test_rescale.py  test_state_repo.py  test_terminal_log.py
(+10 files in other folders)
