[project]
name = "starshot-benchmark-server"
version = "0.1.0"
description = "Orchestrator server for text-to-3D scene pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "trimesh>=4.5",
    "numpy>=2.0",
    "rich>=13.9",
    "httpx>=0.27",
    "fal-client>=0.5",
    "python-dotenv>=1.0",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.389",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
